# pgserviceparser

./: .gitignore  .pre-commit-config.yaml  404.html  LICENSE  README.md  index.html  objects.inv  pyproject.toml  setup.py
.github/: dependabot.yml
.github/workflows/: deploy-to-pypi.yml  docs.yml  docs_builder.yml  release.yml  test.yml  wheel.yml
docs/: mkdocs.yml  requirements.txt
docs/docs/: api.md  exceptions.md  gui.md  gui_widget_api.md  index.md  message_bar.md  pgserviceparser_widget.md
exceptions/: index.html
pgserviceparser/: __init__.py  exceptions.py  service_settings.py
pgserviceparser/gui/: __init__.py  __main__.py  compat.py  item_delegates.py  main_window.py  message_bar.py  service_widget.py  setting_model.py
scripts/: screenshots.py
test/: test_gui.py  test_lib.py
test/data/: pgservice.conf  service_base.txt
